# gnome-networking

./: .gitignore  pom.xml
.github/workflows/: build-and-deploy.yml  bump-and-deploy.yml
src/it/java/group/gnometrading/networking/: BaseSSLSocketServer.java  BaseSocketServer.java
src/it/java/group/gnometrading/networking/sockets/: BaseNativeSocketIntegrationTest.java  NativeSSLSocketIntegrationTest.java  NativeSocketIntegrationTest.java  SSLConfig.java  SSLSocketServer.java  SocketIntegrationTest.java  SocketServer.java
src/it/java/group/gnometrading/networking/websockets/: BasicWebSocketIntegrationTest.java  WebSocketIntegrationTest.java  WebSocketServer.java
src/it/java/group/gnometrading/networking/websockets/integration/: BasicWebSocketIntegrationTest.java  WebSocketIntegrationTest.java  WebSocketServer.java
src/main/java/group/gnometrading/networking/: Main.java
src/main/java/group/gnometrading/networking/client/: AbstractSocketClientBuilder.java  AbstractSocketMessageClient.java  Client.java  MessageClient.java  SocketClient.java  SocketClientBuilder.java
src/main/java/group/gnometrading/networking/http/: HTTPClient.java  HTTPDecoder.java  HTTPEncoder.java  HTTPMethod.java  HTTPProtocol.java  HTTPResponse.java  HTTPSocketMessageClient.java
src/main/java/group/gnometrading/networking/sockets/: GSocket.java  GnomeSocket.java  NIOSocket.java  NativeSSLSocket.java  NativeSocket.java  NetSSLSocket.java  NetSocket.java  SocketState.java
src/main/java/group/gnometrading/networking/sockets/factory/: GSocketFactory.java  GnomeSocketFactory.java  NIOSocketFactory.java  NativeSSLSocketFactory.java  (+3 more)
src/main/java/group/gnometrading/networking/utils/: IOUtil.java
src/main/java/group/gnometrading/networking/websockets/: HandshakeHandler.java  HandshakeInput.java  WebSocketClient.java  WebSocketClientBuilder.java  WebSocketMessageClient.java  WebSocketResponse.java
src/main/native/: .gitignore  CMakeLists.txt  group_gnometrading_networking_sockets_NativeSSLSocket.cpp  group_gnometrading_networking_sockets_NativeSSLSocket.h  group_gnometrading_networking_sockets_NativeSocket.cpp  group_gnometrading_networking_sockets_NativeSocket.h
src/main/native/boringssl/ssl/test/: README.md
src/main/native/boringssl_tmp/: API-CONVENTIONS.md  BUILDING.md  CONTRIBUTING.md  INCORPORATING.md  README.md  SANDBOXING.md
src/main/native/boringssl_tmp/crypto/fipsmodule/: FIPS.md
src/main/native/include/: jlong_md.h  jni_util.h  net_util.h  nio.h  nio_util.h
src/test/java/group/gnometrading/networking/client/: SocketClientTest.java
src/test/java/group/gnometrading/networking/http/: HTTPDecoderTest.java  HTTPEncoderTest.java
src/test/java/group/gnometrading/networking/websockets/: WebSocketClientTest.java
(+10 files in other folders)
